Update tests for *.hidden-tmTheme files

--- a/tests/_ColorScheme_Failure/color_scheme_test.html
+++ b/tests/_ColorScheme_Failure/color_scheme_test.html
@@ -1,4 +1,4 @@
-<!-- COLOR SCHEME TEST "UnitTesting/tests/_ColorScheme_Failure/failure.tmTheme" "HTML" -->
+<!-- COLOR SCHEME TEST "UnitTesting/tests/_ColorScheme_Failure/failure.hidden-tmTheme" "HTML" -->
 <!DOCTYPE html>
 <html>
     <head>
