--- a/tests/_ColorScheme_Success/color_scheme_test.html
+++ b/tests/_ColorScheme_Success/color_scheme_test.html
@@ -1,4 +1,4 @@
-<!-- COLOR SCHEME TEST "UnitTesting/tests/_ColorScheme_Success/success.tmTheme" "HTML" -->
+<!-- COLOR SCHEME TEST "UnitTesting/tests/_ColorScheme_Success/success.hidden-tmTheme" "HTML" -->
 <!DOCTYPE html>
 <html>
     <head>
